--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.58",
     "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
     "node-sass": "^6.0.0",
     "prop-types": "15.7.2",
     "react": "^17.0.2",
@@ -17,9 +16,10 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/user-event": "^12.8.3",
     "enzyme": "3.11.0",
-    "enzyme-to-json": "3.6.2",
     "enzyme-adapter-react-16": "1.15.6",
+    "enzyme-to-json": "3.6.2",
     "eslint": "7.15.0",
     "eslint-config-standard": "16.0.2",
     "eslint-plugin-import": "2.22.1",
@@ -55,6 +55,10 @@
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
     ],
-    "watchPathIgnorePatterns": ["./reportWebVitals.js", "./index.js", "./constants"]
+    "watchPathIgnorePatterns": [
+      "./reportWebVitals.js",
+      "./index.js",
+      "./constants"
+    ]
   }
 }
